fixed #149. The problem was inside getMask method. In some rare circumstances largely when single channel detections are allowed and with spectral averaging enabled, the method failed to flag the lines which have already been detected and went into infinite loop by detecting them again. The condition of leaving the loop (no new lines found) was never satisfied as a result of this.

--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -3,6 +3,8 @@ Changelog
 
 Release 2.3.0 [2009-01-??]
 
+* Ticket #149 Fixed the bug causing spectral line search to go into an infinite loop
+   in some rare circumstances
 * Ticket #110 Added export to CLASS readable FITS files 
    scantable.save("myfile.fits", "CLASS")
 * Ticket #142 Fix of the frequency alignment for long observations
