--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -1,20 +1,25 @@
 Changelog
 =========
 
-Release 3.0.0 [2010-04-??]
+Release 3.0.0 [2010-05-06]
 
+* BEWARE: added asap2to3 which converts '.asap' files from version 2 to 
+          version 3
 * Ticket #183 Added scantable.get_weather
-* Ticket #181 Added work-around for casacore bug in saving tables with selection
+* Ticket #181 Added work-around for casacore bug in saving tables with
+              selection
 * Ticket #178 Added opacity_model based on  miriad's atmospheric model
 * Ticket #177 Added function skydip to determine opacities.
 * Ticket #172 Fixed non-working scantable.resample
-* Ticket #155 Better output filenames. Ignore non-existsing beams/pols/ifs/scans
+* Ticket #155 Better output filenames. Ignore non-existsing 
+              beams/pols/ifs/scans
 * Ticket #157 numpy >= 1.1 support
 * Ticket #158 fixed plotter.set_font
 * Ticket #160 Aspect ratio of plotter is customisable now
 * Ticket #163 fixed for scantable.set_sourcetype
 * Ticket #164 Upgrade note in wiki FAQ
-* Ticket #165 Handle non-parallactified polarimtery data (if supported in rpfits)
+* Ticket #165 Handle non-parallactified polarimtery data (if supported in 
+              rpfits)
 * Ticket #167 Added running polynomial filter to scantable.smooth
 * Ticket #168 Data exported via scantable.save now contains correct frequency
               or velocity information
@@ -27,6 +32,7 @@ Release 3.0.0 [2010-04-??]
 * Interactive plotting annotations via optional argument interactive=True
 * Interactive creation of masks on the plotter - plotter.create_mask
 * Tidy up date range in asapplotter.plotazel/plotpointings
+* support for gcc-4.4
 
 Release 2.3.1 [2009-03-25]
 
@@ -37,11 +43,13 @@ Release 2.3.1 [2009-03-25]
 Release 2.3.0 [2009-03-13]
 
 * Ticket #150 fix in casacore for frequency frame conversions
-* Ticket #151 added rc parameter and function set_sourcetype to identify on/off scans
-* Ticket #78/#112 Resolved the issue with random errors occuring under linux for large
+* Ticket #151 added rc parameter and function set_sourcetype to identify
+              on/off scans
+* Ticket #78/#112 Resolved the issue with random errors occuring under linux
+                  for large
    data files, which corrupted the identifaction of off scans
-* Ticket #149 Fixed the bug causing spectral line search to go into an infinite loop
-   in some rare circumstances
+* Ticket #149 Fixed the bug causing spectral line search to go into an
+              infinite loop in some rare circumstances
 * Ticket #110 Added export to CLASS readable FITS files
    scantable.save("myfile.fits", "CLASS")
 * Ticket #142 Fix of the frequency alignment for long observations
@@ -51,10 +59,10 @@ Release 2.3.0 [2009-03-13]
 * Ticket #148 opacity correction wasn't applied to TSYS
 * Ticket #135 quotient detection failure for specific source names
 * Ticket #140 NaN values not handled - added scantable.flag_nans to ensure
-   that the NaN are flagged
+              that the NaN are flagged
 * added python iterator access to scantable rows
-* made functions available to directly manipulate spectra
-   scantable.get/set_spectrum
+* made functions available to directly manipulate spectra 
+  scantable.get/set_spectrum
 * upgrade to support ipython >= 0.8.1
 * support gcc-4.3
 * use scons >= 1.1.0
