--- a/INSTALL
+++ b/INSTALL
@@ -16,11 +16,10 @@ The normal install procedure is as follows
 .. code::
 
    scons
-   # Do this if you haven't got a measures data directory already
-   export ASAPDATA=.
-   ./bin/asap_update_data
-   #
-   scons install
+   scons makedist=1
+   cd asap-4.1.0
+   python setup.py install
+   asap # exit with <Ctrl-D>
 
 Obtaining the data directory
 ============================
@@ -32,28 +31,11 @@ Before you run asap for the first time simply run::
 
 This will install the data repository into the correct location.
 
-There are several ways to do this. 
-a) If you already have the 'data' directory, copy it to the root directory and run the normal install procedure::
-
-   scons
-   scons install
-
-b) You can obtain the data repository from the ftp site.
-   Simply run::
-
-   	export ASAPDATA=.
-     	./bin/asap_update_data
-
-   This will retrieve and unpack the data directory.
-   After this run:: 
-
-   	scons install
-
 Creating a binary distribution
 ==============================
 
 after building using 'scons', you can create a compressed tarball of the binaries. This is done via the target 'makedist='. The argument should be an obvious identifier for the system you want to support, e.g. 'sarge' or 'fc5-x86_64'::
 
-    scons makedist=sarge
+    python setup.py bdist_egg
 
-This will create an archive in the subdirectory 'dist' named 'asap-X.Y.Z-sarge.tar.bz2', where X,Y,Z are the version numbers e.g 2.1.0.
+This will create an archive in the subdirectory 'dist' named 'asap-X.Y.Z-py2.Negg', where X,Y,Z are the version numbers e.g 4.1.0.
