--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -1,6 +1,16 @@
 Changelog
 =========
 
+Release 4.1.0 [2012-17-05]
+
+* reworked build system to work as 'normal' python package
+* fixed bug in average_time introduced in 4.0
+* experimental merging of IFs
+* speed ups
+* move to ipython>=0.11
+* fixed regression of reference scan detection for Hobart data
+* work under OS X 10.7 
+
 Release 4.0.0 [2011-10-05]
 
 * Ticket #251 fixed scantable.scale broken behaviour when selection was set
