--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-asap (4.1.x-trunk) unstable; urgency=low
+asap (4.1.0) unstable; urgency=low
 
-  * Initial Release.
+  * Initial debian package release.
 
- -- Malte Marquarding <Malte.Marquarding@csiro.au>  Wed, 11 May 2011 16:00:56 +1000
+ -- Malte Marquarding <mar637@brage.atnf.CSIRO.AU>  Thu, 04 Oct 2012 12:25:32 +1000
