--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,16 @@
+asap (4.1.2) unstable; urgency=low
+
+  * added postinst script
+  * added ability to set_tsys
+
+ -- Malte Marquarding <Malte.Marquarding@csiro.au>  Fri, 15 Mar 2013 14:38:45 +1100
+
+asap (4.1.1) unstable; urgency=low
+
+   * added various methods.
+
+ -- Malte Marquarding <Malte.Marquarding@csiro.au>  Thu, 14 Mar 2013 21:15:57 +1100
+
 asap (4.1.0) unstable; urgency=low
 
   * Initial debian package release.
