--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,16 @@
 Changelog
 =========
 
+Release 4.2.0 [2012-07-02]
+
+* #291: add set_sourcename
+* #293: rework history to allow access to large history
+* #293:method to drop_history
+* #291: add some more info to freq_align log
+* #289: added ability to set Tsys, both for scalar and vector values
+* #288: implemented dropping of xpols as scantable.drop_xpol()
+* optimisation of  baselining functions for scantable.
+
 Release 4.1.0 [2012-10-10]
 
 * reworked build system to work as 'normal' python package
